--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@1&family=Ubuntu:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="A social network for unsocial people"
-    />
+    <meta name="description" content="A social network for unsocial people" />
     <title>React App</title>
   </head>
   <body>
